# Kaggle_Playground-Predict_Customer_Churn

./: main.py  pyproject.toml
config/: config.yaml
notebooks/: 01_eda.ipynb
